add counters for black/whitelist
