# docs/swagger.yaml
@@ -254,6 +254,24 @@ paths:
       summary: update domain by Domain Name
       tags:
       - domains
+  /v1/domains/count:
+    post:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      summary: count Domains
+      tags:
+      - domains
   /v1/inspect:
     post:
       consumes:
